# RL-NBV

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  benchmark.py  colab_training.ipynb  config.yaml  custom_callback.py  docker-compose.yml  generate_replay_buffer.py  ig_proxy.py  main.sh  pack.sh  pyproject.toml  requirements.txt  run_benchmark.sh  run_generate_replay_buffer.sh  run_train.py  run_train.sh  setup.py  split_dataset.py  test.py  train.py  train_result.txt
distance/: chamfer_distance.cpp  chamfer_distance.cu  chamfer_distance.py  emd_module.py
envs/: rl_nbv_env.py  shapenet_reader.py
models/: model_utils.py  pc_nbv.py  pointnet2_cls_ssg.py
models/pretrained/pointnet2_msg_normals/: pointnet2_cls_msg.py  pointnet2_utils.py
optim/: adamw.py
tools/render/: README.md  check_render_rlt.py  generate_render_exr.py  generate_render_pcd.py  generate_viewspace_poses.py  process_exr_shapenet.py  render_depth_shapenet.py  run.sh  run_check_rlt.sh  viewspace_shapenet.py
tools/sample/: README.md  build.sh  generate_ground_truth.py  run.sh
