[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-nbv"
version = "0.1.0"
description = "Reinforcement Learning for Next Best View planning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache"}

dependencies = [
    "absl-py==2.3.1",
    "addict==2.4.0",
    "asttokens==3.0.1",
    "attrs==25.3.0",
    "backcall==0.2.0",
    "blinker==1.8.2",
    "certifi==2026.1.4",
    "cffi==1.17.1",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.4",
    "click==8.1.8",
    "cloudpickle==3.1.2",
    "comm==0.2.3",
    "configargparse==1.7.1",
    "contourpy==1.1.1",
    "cryptography==46.0.5",
    "cycler==0.12.1",
    "dash==4.0.0",
    "decorator==5.2.1",
    "distlib==0.4.0",
    "executing==2.2.1",
    "farama-notifications==0.0.4",
    "fastjsonschema==2.21.2",
    "filelock==3.16.1",
    "flask==3.0.3",
    "fonttools==4.57.0",
    "fsspec==2025.3.0",
    "google-auth==2.48.0",
    "google-auth-oauthlib==1.0.0",
    "grpcio==1.70.0",
    "gym==0.26.2",
    "gym-notices==0.1.0",
    "gymnasium==1.0.0",
    "identify==2.6.1",
    "idna==3.11",
    "importlib-metadata==8.5.0",
    "importlib-resources==6.4.5",
    "ipython==8.12.3",
    "ipywidgets==8.1.8",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "jupyter-core==5.8.1",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver==1.4.7",
    "markdown==3.7",
    "markupsafe==2.1.5",
    "matplotlib==3.7.5",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "narwhals==1.42.1",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.1",
    "nodeenv==1.10.0",
    "numpy==1.24.4",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-nccl-cu12==2.20.5",
    "nvidia-nvjitlink-cu12==12.9.86",
    "nvidia-nvtx-cu12==12.1.105",
    "oauthlib==3.3.1",
    "open3d==0.19.0",
    "packaging==26.0",
    "pandas==2.0.3",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==10.4.0",
    "pkgutil-resolve-name==1.3.10",
    "platformdirs==4.3.6",
    "plotly==6.5.2",
    "pre-commit==3.5.0",
    "prompt-toolkit==3.0.52",
    "protobuf==5.29.6",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pygments==2.19.2",
    "pyparsing==3.1.4",
    "pyquaternion==0.9.9",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "referencing==0.35.1",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "retrying==1.4.2",
    "rpds-py==0.20.1",
    "rsa==4.9.1",
    "scikit-learn==1.3.2",
    "scipy==1.10.1",
    "setuptools==75.3.4",
    "six==1.17.0",
    "stable-baselines3==2.4.1",
    "stack-data==0.6.3",
    "sympy==1.13.3",
    "tensorboard==2.14.0",
    "tensorboard-data-server==0.7.2",
    "threadpoolctl==3.5.0",
    "torch==2.4.1",
    "torchinfo==1.8.0",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "triton==3.0.0",
    "typing-extensions==4.13.2",
    "tzdata==2025.3",
    "urllib3==2.2.3",
    "virtualenv==20.36.1",
    "wcwidth==0.6.0",
    "werkzeug==3.0.6",
    "wheel==0.45.1",
    "widgetsnbextension==4.0.15",
    "zipp==3.20.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
]
