[project]
name = "rl-nbv"
version = "0.1.0"
description = "Reinforcement Learning for Next Best View planning"
readme = "README.md"
requires-python = ">=3.11, <3.12"
license = "Apache-2.0"

dependencies = [
    "OpenEXR",
    "gym",
    "imath",
    "mathutils",
    "matplotlib",
    "numpy",
    "open3d",
    "shimmy",
    "stable-baselines3",
    "torch",
    "torchinfo",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
]
